# cuppa

./: .SRCINFO  .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PKGBUILD  README.md  cmake_install.cmake
src/: fb.h  main.cpp  ps.h  sync.h
src/utf8/: checked.h
